<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrackMars</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dialog_create_point">DialogCreatePoint</string>
    <string name="name_the_point">Name the point</string>
    <string name="choose_address">You can choose the address for the name</string>
    <string name="no_name">You have to name this point or chose the address for the name</string>
    <string name="no_conn_no_address">No internet connection. Google can not determine the point\'s address.</string>
    <string name="map">map</string>
    <string name="details">details</string>
    <string name="points">points</string>
    <string name="tracks">tracks</string>
    <string name="dateFormatWOTime">dd/MM/yyyy</string>
    <string name="timeFormat">HH:mm:ss</string>
    <string name="day1">day</string>
    <string name="day2_4">days</string>
    <string name="day5_0">days</string>
    <string name="day_more_then1">days</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="kilometer">km</string>
    <string name="meter">m</string>
    <string name="hour1">hour</string>
    <string name="hour2_4">hours</string>
    <string name="hour5_0">hours</string>
    <string name="min1">minute</string>
    <string name="min2_4">minutes</string>
    <string name="min5_0">minutes</string>
    <string name="ago">ago</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="locale">us</string>
    <string name="time">time</string>
    <string name="distance">distance</string>
    <string name="in_motion">in motion</string>
    <string name="avg_speed">avg speed</string>
    <string name="kmph">km/h</string>
    <string name="mph">mph</string>
    <string name="title_activity_points">Points list</string>
    <string name="title_activity_tracks">Tracks list</string>
    <string name="hello_world">Hello world!</string>
    <string name="track_record_settings">Track record settings</string>
    <string name="interval">interval</string>
    <string name="title_activity_settings">Settings</string>
    <string name="end_of_trip">End of trip</string>
    <string name="name_the_trip">Name the trip</string>
    
    <color name="white">#FFFFFF</color>
    <color name="general_light_background">#FFFFFF</color>
    <color name="very_dark_text">#000000</color>
    <color name="dark_gray">#444444</color>
    <color name="middle_gray">#848484</color>
	<color name="middle_light_gray">#c9c9c9</color>
	<color name="colorful">#F89614</color>
	<color name="colorfulHeaderText">#1E2C93</color>
	
    
	<string name="gps">gps</string>
	<string name="network">network</string>
	<string name="unknown_place">Unsorted places</string>
	<string name="no_places">There are saved neither locations nor travels yet. Start you trip!</string>
	<string name="new_trip">New trip</string>
	<string name="more">More</string>
			
</resources>
