<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

	<fragment
        android:id="@+id/headerFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        class="com.trackmars.and.tracker.Header" />

    
    <Button
        android:id="@+id/buttonPoints"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerFragment"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="35dp"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:onClick="onClick"
	    android:textSize="21dp" 
	    android:textColor="@color/middle_gray"
        android:text="@string/points" />


    <Button
        android:id="@+id/buttonDetails"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerFragment"
        android:layout_marginTop="10dp"
        
        android:layout_centerHorizontal="true"
        
        android:background="@null"
        android:onClick="onClick"
	    android:textSize="21dp" 
        android:text="@string/map" />
    
    
    <Button
        android:id="@+id/buttonTracks"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerFragment"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:onClick="onClick"
	    android:textSize="21dp" 
	    android:textColor="@color/middle_gray"
        android:text="@string/tracks" />
    
    
    
    <ImageButton
        android:id="@+id/imageButtonResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:background="@null"
        android:onClick="onClick"
        android:src="@drawable/button_resume" />

    <ImageButton
        android:id="@+id/imageButtonPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageButtonResume"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:src="@drawable/button_point"
        android:onClick="onClick" />

    <ImageButton
        android:id="@+id/imageButtonRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_alignTop="@+id/imageButtonPoint"
        android:background="@null"
        android:onClick="onClick"
        android:src="@drawable/button_record" />

	<RelativeLayout
	        android:id="@+id/timeBG"
	        android:layout_width="145dp"
	        android:layout_height="60dp"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="10dp"
	        android:layout_below="@+id/buttonPoints"
	        android:layout_marginTop="10dp"
	        android:stretchColumns="1"
			android:background="@color/middle_light_gray"
	        >
	        
	    	<TextView
	    	    android:layout_width="wrap_content" 
	    	    android:layout_height="wrap_content"
	    	    android:layout_alignParentTop="true" 
	    	    android:layout_alignParentLeft="true"
	    	    android:layout_marginLeft="3dp" 
	    	    android:layout_marginTop="3dp"
	    	    android:text="@string/time"
	    	    android:textSize="12dp" 
	    	    android:textColor="#848484"
	    	    />	    
	    
	    	<TextView
	    	    android:id="@+id/time"
	    	    android:layout_width="wrap_content" 
	    	    android:layout_height="wrap_content"
	    	    android:layout_alignParentBottom="true" 
	    	    android:layout_alignParentLeft="true"
	    	    android:layout_marginLeft="6dp" 
	    	    android:layout_marginBottom="1dp"
	    	    android:text="@string/time" 
	    	    android:textSize="22dp" 
	    	    />	    
	    	
	</RelativeLayout>
    
	<RelativeLayout
	        android:id="@+id/distanceBG"
	        android:layout_width="145dp"
	        android:layout_height="60dp"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="10dp"
	        android:layout_below="@+id/buttonPoints"
	        android:layout_marginTop="10dp"
	        android:stretchColumns="1"
			android:background="@color/middle_light_gray"
	        >
	    	<TextView
	    	    android:layout_width="wrap_content" 
	    	    android:layout_height="wrap_content"
	    	    android:layout_alignParentTop="true" 
	    	    android:layout_alignParentRight="true"
	    	    android:layout_marginRight="3dp" 
	    	    android:layout_marginTop="3dp"
	    	    android:text="@string/distance" 
	    	    android:textSize="12dp" 
	    	    android:textColor="@color/middle_gray"
	    	    />	    
	    	<TextView
	    	    android:id="@+id/distance"
	    	    android:layout_width="wrap_content" 
	    	    android:layout_height="wrap_content"
	    	    android:layout_alignParentBottom="true" 
	    	    android:layout_alignParentLeft="true"
	    	    android:layout_marginLeft="6dp" 
	    	    android:layout_marginBottom="1dp"
	    	    android:text="@string/time" 
	    	    android:textSize="22dp" 
	    	    />	    
	</RelativeLayout>
	
	<TextView
	    android:id="@+id/in_motion_caption"
	    	    android:layout_width="wrap_content" 
	    	    android:layout_height="wrap_content"
	    	    android:layout_below="@+id/timeBG"
	        	android:layout_alignParentRight="true"
	        	android:layout_marginRight="165dp"
	        	android:layout_marginTop="16dp"
	    	    android:textSize="21dp" 
	    	    android:textColor="@color/middle_gray"
	    	    android:text="@string/in_motion"
	    />
    
	<TextView
	    android:id="@+id/in_motion"
	    	    android:layout_width="wrap_content" 
	    	    android:layout_height="wrap_content"
	    	    android:layout_alignBottom="@+id/in_motion_caption"
	        	android:layout_alignParentLeft="true"
	        	android:layout_marginLeft="165dp"
	        	android:layout_marginBottom="-5dp"
	    	    android:textSize="21dp" 
	    	    android:text="@string/in_motion"
	    />

	<TextView
	    android:id="@+id/avg_speed_caption"
	    	    android:layout_width="wrap_content" 
	    	    android:layout_height="wrap_content"
	    	    android:layout_below="@+id/in_motion_caption"
	        	android:layout_alignParentRight="true"
	        	android:layout_marginRight="165dp"
	        	android:layout_marginTop="16dp"
	    	    android:textSize="21dp" 
	    	    android:textColor="@color/middle_gray"
	    	    android:text="@string/avg_speed"
	    />
    
	<TextView
	    android:id="@+id/avg_speed"
	    	    android:layout_width="wrap_content" 
	    	    android:layout_height="wrap_content"
	    	    android:layout_alignBottom="@+id/avg_speed_caption"
	        	android:layout_alignParentLeft="true"
	        	android:layout_marginLeft="165dp"
	        	android:layout_marginBottom="-5dp"
	    	    android:textSize="21dp" 
	    	    android:text="@string/avg_speed"
	    />
		
		
</RelativeLayout>
