<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:src="@drawable/button_menu" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="5dp"
        android:src="@drawable/horisontal_line" />

    <Button
        android:id="@+id/buttonMap"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:text="@string/map" />
    	
    <Button
        android:id="@+id/buttonPoints"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/buttonMap"
        android:layout_marginRight="30dp"
        android:background="@null"
        android:onClick="onClick"
        android:text="@string/points" />

        <Button
        android:id="@+id/buttonTracks"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/buttonMap"
        android:layout_marginLeft="30dp"
        android:background="@null"
        android:onClick="onClick"
        android:text="@string/tracks" />
    
    

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_alignParentBottom="true"
        android:layout_below="@+id/buttonMap"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="110dp"
	    android:background="@drawable/back">
	<fragment
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:id="@+id/map"
	    class="com.google.android.gms.maps.SupportMapFragment" />
	</LinearLayout>
    
    <ImageButton
        android:id="@+id/imageButtonResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:background="@null"
        android:onClick="onClick"
        android:src="@drawable/button_resume" />

    <ImageButton
        android:id="@+id/imageButtonPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageButtonResume"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:src="@drawable/button_point"
        android:onClick="onClick" />

    <ImageButton
        android:id="@+id/imageButtonRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_alignTop="@+id/imageButtonPoint"
        android:background="@null"
        android:onClick="onClick"
        android:src="@drawable/button_record" />

    
</RelativeLayout>
